fix spacing in mobile nav

--- a/css/sass/partials/_header.scss
+++ b/css/sass/partials/_header.scss
@@ -38,7 +38,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    padding: $gap / 2 $gap / 2 $gap / 2;
+    padding: 1em 1em 1em 2em;
     background-color: $color-white;
     z-index: 3;
     transform: translateY(0);
