--- a/css/style.css
+++ b/css/style.css
@@ -989,7 +989,7 @@ svg {
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 1em 1em 1em;
+  padding: 1em 1em 1em 2em;
   background-color: #fafafa;
   z-index: 3;
   -webkit-transform: translateY(0);
